# camera-service

./: .gitignore  LICENSE  README.md  cam-up  deploy.yaml  docker-compose.dev.yml  docker-compose.external-config.yml  docker-compose.jp7.yml  docker-compose.usb.yml  docker-compose.yml  gige-up  rigging.yaml
.github/workflows/: certify.yml
core-driver/: Dockerfile  Dockerfile.dev  main.py  requirements.txt  supervisor.py
core-driver/cam_driver/: bayer_tile.py  camera.py  config.py  dropstats.py  formats.py  pipeline.py  recorder.py  sidecar.py  timestamps.py  transport.py
core-driver/cam_driver/sources/: __init__.py  base.py  factory.py  gige.py  gstbase.py  rtsp.py  usb.py
core-driver/config/: camera.yaml  fake-camera.yaml  gvsp-reconnect.yaml  gvsp-roundtrip.yaml  gvsp-test.yaml  rtsp-fake.yaml  rtsp-real-noprobe.yaml  rtsp-real.yaml  supervisor-fake.yaml  usb-fake-color.yaml  usb-fake-mjpeg.yaml  usb-fake.yaml  usb-real-raw.yaml  usb-real.yaml  webrtc-fake-bayer.yaml  webrtc-fake.yaml
core-driver/config/sensors/: cam_a.yaml  cam_b.yaml  cam_gige.yaml  cam_rtsp.yaml  cam_thermal.yaml  cam_usb.yaml
core-driver/gige_driver/: __init__.py  bayer_tile.py  camera.py  config.py  pipeline.py  recorder.py  sidecar.py  timestamps.py  transport.py
core-driver/tests/: test_config.py  test_dropstats.py  test_formats.py  test_recorder.py  test_timestamps.py  test_transport.py
core-driver/tools/: dev_test.sh  fake_rtsp_server.py  nvenc_lossless_test.py  nvenc_lossless_test.sh  orin_rtsp_transport_ab.sh  orin_rtsp_validate.sh  orin_usb_hotplug_test.sh  probe_temporal.py  rtsp_reconnect_test.sh  rtsp_test.sh  shm_probe.py  supervisor_test.sh  tiling_benchmark.py  usb_test.sh
docs/: DESIGN.md  DISCOVERY.md  ROADMAP.md  deploy-without-rig.md  fleet-build-contract.md  jetpack7-bringup.md  ptp-timestamp-experiment.md  recording-tuning.md  unixfd-migration.md
plugins/: README.md
plugins/ros1-bridge/: CMakeLists.txt  Dockerfile  README.md  compose.yml  entrypoint.sh  package.xml
plugins/ros1-bridge/launch/: bridge.launch
plugins/ros1-bridge/src/: cam_ros1_bridge.cpp  gige_ros1_bridge.cpp
plugins/ros2-bridge/: CMakeLists.txt  Dockerfile  README.md  compose.yml  entrypoint.sh  package.xml
plugins/ros2-bridge/launch/: bridge.launch.py
plugins/ros2-bridge/src/: cam_bridge_base.cpp  cam_bridge_base.hpp  cam_header_bridge.cpp  cam_unixfd_bridge.cpp  gige_bridge_base.cpp  gige_bridge_base.hpp  gige_header_bridge.cpp  gige_ros2_bridge.cpp  gige_unixfd_bridge.cpp
plugins/ros2-bridge/tools/: bridge_test.sh
plugins/webrtc-bridge/: Dockerfile  README.md  compose.yml  run.sh
plugins/webrtc-bridge/tools/: bridge_stream.py  discovery_probe.py  discovery_test.sh  h264_level.py  test_h264_level.py  test_thermal_preview.py  thermal_preview.py  webrtc_consumer.py  webrtc_test.sh  zenoh_advertiser.py
tools/: build-images.sh  orchestration_test.sh  package-launch-surface.sh  roscore.sh  sensor_env.py  zenohd.sh
tools/gvsp-chunk-emitter/: Dockerfile  README.md  apply_chunk_patch.py  chunk_check.py  gvsp_test.sh  reconnect_test.sh  roundtrip_test.py  roundtrip_test.sh
