<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gige_ros2_bridge</name>
  <version>0.0.1</version>
  <description>Bridges the gige-vision-service shm transport to sensor_msgs/Image,
    stamping header.stamp from the per-frame hardware (PTP) timestamp.</description>
  <maintainer email="maintainer@example.com">gige-vision-service</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pkg-config</build_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <!-- provides the lazy <topic>/compressed (JPEG/PNG) transport at runtime -->
  <exec_depend>compressed_image_transport</exec_depend>

  <!-- GStreamer (gstreamer-1.0, gstreamer-app-1.0) is resolved via pkg-config from
       system packages: libgstreamer1.0-dev, libgstreamer-plugins-base1.0-dev. -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
